@@ -33,6 +33,9 @@ Release date: TBA
 
   Refs pylint-dev/pylint#8425
 
+* Add simple command line interface for astroid to output generated AST.
+  Use with ``python -m astroid``.
+
 
 
 What's New in astroid 4.0.3?
